--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,6 @@
 <body>
 
 
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="content/app.js"></script>
 </body>
 </html>
