--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <style type="text/css" src="content/app.css"></style>
 </head>
 <body>
 
